--- a/README.org
+++ b/README.org
@@ -4,3 +4,8 @@
 Build a lexer, so far so good.
 What seemed to be really complex now is clear and simple.
 Now I feel confident writing a lexer, actually I will say more, I can do a better job (in some specific case) than the code in the book.
+* DONE Chapter 2 - Parsing
+Parserize the token obtained from previous step.
+On some parts I need to study a little bit further, but overall I'm ok.
+The techinique used to parse the precedence in the parsing is really nice.
+Now I also understand why the parsing for lisp is trivial.
